# mscode

./: .gitignore  Cargo.toml
crates/agents/: Cargo.toml
crates/agents/src/: critic.rs  error.rs  extract.rs  lib.rs  plan.rs  planner.rs  supervisor.rs
crates/cli/: Cargo.toml
crates/cli/benches/: cold_start.rs
crates/cli/src/: lib.rs
crates/cli/tests/: cli_new_creates_session.rs  cli_resume_rejects_unknown_id.rs  cli_sessions_lists_sessions.rs  cold_start.rs  help_command.rs  version_command.rs
crates/config/: Cargo.toml
crates/config/src/: env.rs  lib.rs  loader.rs  merge.rs  paths.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  orchestrator.rs  state.rs
crates/credentials/: Cargo.toml
crates/credentials/src/: catalog.rs  error.rs  keyring_backend.rs  lib.rs  model.rs  sqlite.rs  store.rs
crates/dag-runtime/: Cargo.toml
crates/dag-runtime/src/: error.rs  graph.rs  lib.rs  types.rs
crates/edit-formats/: Cargo.toml
crates/edit-formats/src/: apply.rs  error.rs  fuzzy.rs  lib.rs  parsers.rs  types.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: error.rs  fast_embedder.rs  lib.rs  mock.rs
crates/exec/: Cargo.toml
crates/exec/src/: context.rs  error.rs  handler.rs  lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: adapter.rs  client.rs  error.rs  lib.rs  protocol.rs  transport.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: error.rs  lib.rs  server.rs  tests.rs
crates/memories/: Cargo.toml
crates/memories/src/: error.rs  lib.rs  scope.rs  store.rs  types.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: event.rs  ids.rs  lib.rs  message.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  lib.rs  mock.rs  models_catalog.rs  provider.rs  sse.rs  stream.rs  types.rs
crates/provider/src/adapters/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/rollout/: Cargo.toml
crates/rollout/src/: error.rs  lib.rs  reader.rs  reducer.rs  writer.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: error.rs  lib.rs  matcher.rs  policy.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  version.rs
crates/state/: Cargo.toml
crates/state/src/: error.rs  lib.rs  migrations.rs  pool.rs
crates/thread-store/: Cargo.toml
crates/thread-store/src/: error.rs  lib.rs  store.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  error.rs  fs_grep.rs  fs_list.rs  fs_read.rs  fs_write.rs  lib.rs  tool.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  config.rs  error.rs  events.rs  lib.rs  login_prompt.rs  login_render.rs  message_buffer.rs  model_picker.rs  modes.rs  render.rs  session_list.rs  slash.rs
crates/vector-index/: Cargo.toml
crates/vector-index-lancedb/: Cargo.toml
crates/vector-index-lancedb/src/: lib.rs  store.rs
crates/vector-index/src/: error.rs  lib.rs  memory.rs  types.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: cli_subcommands_smoke.rs  cold_start_under_200ms.rs  dag_5_node.rs  edit_formats_deterministic.rs  login_commands_smoke.rs  login_flow_smoke.rs  mcp_server_stdio.rs  memory_layer_round_trip.rs  models_cli_smoke.rs  models_smoke.rs  session_lifecycle.rs  session_resume_portable.rs  tools_round_trip.rs  vector_store_round_trip.rs
