[package]
name = "mscode-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mscode-shared = { workspace = true }
mscode-state = { workspace = true }
mscode-thread-store = { workspace = true }
mscode-tui = { workspace = true }
mscode-credentials = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bin]]
name = "mscode"
path = "src/bin/mscode.rs"

[[bench]]
name = "cold_start"
harness = false
path = "benches/cold_start.rs"
