[package]
name = "mscode-credentials"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-account provider credential storage for the mscode CLI"

[dependencies]
mscode-state = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
