[package]
name = "mscode-edit-formats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mscode-shared = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
