[package]
name = "mscode-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mscode-shared = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
