[package]
name = "mscode-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mscode-shared = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
